# septuple-cartpole

./: .gitignore  README.md  pyproject.toml  reproduce_n7.py
.github/workflows/: tests.yml
configs/: env-base.yaml  nominal.py
docs/: METHOD.md  PRIOR_ART.md
results/: clvalidate_n7_composite_seed12345.json  clvalidate_n7_composite_seed777.json  clvalidate_n7_fixed_seed12345.json  nom_n7_4ms.npz  nom_n7_dense1ms.npz  nom_n7_gluck_cont.npz  stageB_demonstration_seed12345_tag0.json
scripts/: _dtvlqr.py  _n7_nominal_4ms.py  _n7_steer_catch3.py  _n7_unperturbed_cl2.py  _ncr_hard_bound.py  cl_validate_n7_composite.py  cl_validate_n7_fixed.py  demo_septuple.py  demo_stage_b.py  r2_validate.py  verify_zoh_n7.py
src/cartpole_race/: collocation.py  controllers.py  plots.py  rollout.py
tests/: conftest.py  test_discrete_tvlqr_monodromy.py  test_dynamics_consistency.py  test_linearization.py  test_lqr_local.py  test_nominal_consistency.py  test_rk4_determinism.py  test_tvlqr_funnel.py
