[project]
name = "septuple-cartpole"
version = "1.0.4"
description = "First open-source, code-reproducible, principled (non-RL) n=7 (septuple) inverted-pendulum-on-a-cart swing-up + balance artifact, empirically validated in saturated simulation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11, <3.13"

# Pinned to the exact versions this release was validated with. Loosen at your
# own risk; the headline numbers were produced under these.
dependencies = [
    "casadi==3.7.2",
    "numpy==2.4.6",
    "scipy==1.17.1",
    "pydantic==2.13.4",
    "pyyaml==6.0.2",
    "matplotlib==3.10.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cartpole_race"]

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
pythonpath = [".", "src", "scripts", "configs"]
testpaths = ["tests"]
